--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -1009,11 +1009,11 @@ md-select.md-default-theme .md-select-value, md-select .md-select-value{
 .dollar-icon{
     position: absolute;
     display: block;
-    line-height: 34px;
+    line-height: 37px;
     padding-left: 10px;
 }
 .dollar-input{
-    padding-left: 20px;
+    padding-left: 20px;text-indent:20px;
 }
 .left-con .cs-subform-control{
     padding-left: 0;
@@ -2519,7 +2519,7 @@ md-icon{min-height:auto;min-width:auto;}
 .md-button{min-height: 32px;min-width:80px;font-size: 12px;font-weight: 600;}
 .md-select-value .md-select-icon{margin:2px 4px;}
 md-dialog .md-dialog-content{padding:50px;}
-.form-horizontal .cs-subform-select{margin-top:0;border-radius:2px;min-width:82px;}
+.form-horizontal .cs-subform-select{margin-top:0;border-radius:2px;}
 .form-horizontal .radio-inline{line-height:23px;}
 md-dialog .md-actions, md-dialog md-dialog-actions{background:#f6f8f8;}
 .selectize-input{border:1px solid #d5dce4;border-radius:2px;min-height:34px;line-height:34px;padding:0;}
