--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -974,7 +974,7 @@ md-backdrop.md-dialog-backdrop:nth-child(2){
 .right-select2 .search-con{margin-top:-54px;float:right;}
 .report .right-select2{float:left;margin:20px 0 0 -10px;width:100%;}
 .right-select2 .cs-subform-select{margin-top:0;}
-.right-select2 .ng-not-empty{float:left;}
+.right-select2 .ng-not-empty{float:left;padding:0 18px 0 10px;}
 md-select.md-default-theme .md-select-value, md-select .md-select-value{
     border: 1px solid #d5dce4;
     border-radius: 2px;
@@ -1021,8 +1021,7 @@ md-select.md-default-theme .md-select-value, md-select .md-select-value{
 .left-con .cs-subform-select{
     height: 34px;
     margin: 0 3px 0 0;
-    border-radius:2px;
-    background:#fff;border:1px solid #d5dce4;
+    border-radius:2px;border:1px solid #d5dce4;padding:0 18px 0 8px;
 }
 .left-con .cs-subform-select[disabled]{
     background: #d5dce4;
@@ -2424,21 +2423,21 @@ md-select:not([disabled]):focus .md-select-value{
 
 
 /* sasa.css */
-.form-horizontal .cs-subform-select{position:relative;}
-.my-select .icon-sort-down{position:absolute;left:80px;float:left}
-.my-select2 .icon-sort-down{position:absolute;left:120px;float:left}
-.my-select3 .icon-sort-down{position:absolute;left:65px;float:left}
-
 select {
+    border-radius:2px;
     border: solid 1px #000;
-    -webkit-border-radius:3px;
-    -moz-border-radius :3px;
-
     appearance:none;
     -moz-appearance:none;
     -webkit-appearance:none;
-    padding:0 25px 0 10px;
+padding:0 18px 0 10px;
+    background: url("../../assets/img/arrow.png") no-repeat scroll right center transparent;
+    background-size:14px;
+
 }
+
+
+select::-ms-expand { display: none; }
+
 table.md-table tbody.md-body > tr.md-row span {white-space: nowrap;}
 
 .form-control{padding:6px;}
@@ -2447,7 +2446,7 @@ table.md-table tbody.md-body > tr.md-row span {white-space: nowrap;}
 md-table-container{max-height:430px;overflow-y:auto;}
 .referral-group{margin:40px 0;}
 .referral-group .control-label{text-align:right;}
-select{border:1px solid #d5dce4;background:#fff;}
+select{border:1px solid #d5dce4;}
 .navbar-brand.navbar-logo img{width:80px;max-height:auto;}
 .boot-bg{margin:0;padding-top:10px;font-size:12px;}
 .boot-bg .text-muted {
