--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -1156,7 +1156,7 @@ border-radius:2px;
 /*Start dashBoard Style*/
 
 .dash-board .data-list .data-list-con{
-    margin: 15px 0;
+    margin:0;
     padding-left: 0;
 }
 .dash-board .data-list .data-list-con:last-child{
@@ -1849,7 +1849,6 @@ input[type="checkbox"].th-checkbox{
 }
 .cs-edit-dialog.bot-blacklist-dialog .setting-title{
     border-top: none;
-    border-bottom: 1px solid #c9c9c9;
     font-size: 24px;
     font-weight: bold;
 }
@@ -2545,6 +2544,8 @@ md-dialog .md-dialog-content{padding:50px;}
 .form-horizontal .cs-subform-select{margin-top:0;border-radius:2px;}
 .form-horizontal .radio-inline{line-height:23px;}
 md-dialog .md-actions, md-dialog md-dialog-actions{background:#f6f8f8;}
+.botblack-height{margin-top:130px;}
+md-dialog md-dialog-content{overflow:initial;}
 .selectize-input{border:1px solid #d5dce4;border-radius:2px;min-height:34px;line-height:34px;padding:0;}
 .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td{vertical-align:middle}
 @media (max-width:1124px){.right-select .search-con{margin-right:5px;
