--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -17,6 +17,10 @@
     background: rgba(255, 255, 255, 0.5);
 }
 
+.masking-loader-usermanagement {
+    background: rgba(255, 255, 255, 0.5);
+}
+
 .loader,
 .loader:before,
 .loader:after {
