--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -952,7 +952,7 @@ md-backdrop.md-dialog-backdrop:nth-child(2){
 /*    width: 78%;
     float: left;*/
 }
-.rd{background:url("../../assets/img/3rd.png") no-repeat;background-size:19px;width:20px;height:19px;display:block;float:left;margin-top:12px;}
+.rd{background:url("../../assets/img/3rd.png") no-repeat;background-size:20px;width:20px;height:20px;display:block;float:left;margin:12px 0 0 -12px;}
 .md-raised.copied-btn{
     height:34px;line-height:34px;padding:0 12px;
     box-shadow: none !important;
@@ -989,9 +989,9 @@ md-backdrop.md-dialog-backdrop:nth-child(2){
 }
 .cs-subform-control>div[uib-datepicker-popup-wrap] {float: left;}
 .right-select2 .search-con{margin-top:-54px;float:right;}
-.report .right-select2{float:left;margin:20px 0 0 -10px;width:100%;}
+.report .right-select2{float:left;margin:15px 0 0 -10px;width:100%;}
 .right-select2 .cs-subform-select{margin-top:0;}
-.right-select2 .ng-not-empty{float:left;padding:0 18px 0 10px;}
+.right-select2 .ng-not-empty{float:left;}
 md-select.md-default-theme .md-select-value, md-select .md-select-value{
     border: 1px solid #d5dce4;
     border-radius: 2px;
@@ -2550,6 +2550,10 @@ md-dialog .md-actions, md-dialog md-dialog-actions{background:#f6f8f8;}
 md-dialog md-dialog-content.botblack-height{overflow:initial;}
 .selectize-input{border:1px solid #d5dce4;border-radius:2px;min-height:34px;line-height:34px;padding:0;}
 .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td{vertical-align:middle}
+.navi ul.nav li .nav-tip{position:relative;}
+.navi ul.nav li .icon-question-sign{margin-left:3px;}
+.navi ul.nav li .icon-question-sign .nav-tips-font{display:none;}
+.navi ul.nav li .icon-question-sign:hover .nav-tips-font{padding:3px 5px;width:175px;line-height:15px;background:#444;color:#fff;position:absolute;top:10px;left:110px;display:block;border-radius:3px;font-size:12px;}
 @media (max-width:1124px){.right-select .search-con{margin-right:5px;
     padding: 0 2px;
     margin-top: -38px;
@@ -2559,10 +2563,12 @@ md-dialog md-dialog-content.botblack-height{overflow:initial;}
     float: right;}.report .right-select{float:left;width:100%}
     .cs-subform-control{padding:0;}
     .right-select2 .search-con{margin-top:-54px;}
-    .report .right-select2{margin-left:0;}}
+    .report .right-select2{margin-left:0;}.right-select{margin-top:15px;}}
 @media (max-width:1024px){
     .navbar-right{width:auto;}
     .fade-in-right-big{width:50%;}
+    .item-domains .input-out{width:50%;}
+    .another-list-btn{margin-top:15px;}
 }
 @media (max-width:910px){
     .profile-content{width:96%;}
