--- a/www.newbidder.com/css/style.css
+++ b/www.newbidder.com/css/style.css
@@ -180,7 +180,7 @@ a:hover,a:focus{text-decoration:none;color:#357cf4;}
 .title{font-size:32px;text-align:center;margin:80px 0 100px 0;line-height:48px;}
 .pricing-box{margin:0 auto 80px auto;}
 .pricing-box li{-webkit-transition: all 0.3s;
-    transition: all 0.3s;width:24.15%;border-style:solid;border-width:2px 2px 2px 2px;border-color:#357cf3 #fbfbfb #fbfbfb #fbfbfb;background:#fbfbfb;float:left;box-shadow:0 0 3px #d4d4d4;margin:0 1.13333% 0 0;border-radius:2px;height:650px;padding-top:15px;}
+    transition: all 0.3s;width:24.15%;border-style:solid;border-width:2px 2px 2px 2px;border-color:#357cf3 #fbfbfb #fbfbfb #fbfbfb;background:#fbfbfb;float:left;box-shadow:0 0 3px #d4d4d4;margin:0 1.13333% 0 0;border-radius:2px;max-height:580px;padding-top:15px;}
 .pricing-box li:nth-last-child(1){margin:0;}
 .pricing-box li.h-line{border-top:2px solid #ff8c00;}
 .pricing-box li.h-line .money-size,.pricing-box li.h-line .money-icon{color:#ff8c00;}
@@ -199,7 +199,7 @@ a:hover,a:focus{text-decoration:none;color:#357cf4;}
 .pricedesc p{line-height:20px;font-size:12px;margin:2px 0 0 0;color:#333;font-weight:500;}
 .pricedesc p i{margin:0 5px;}
 .pricedesc-list{border-top:1px solid #f3f3f3;margin:30px auto;display:inline-block;width:85%;height:435px;}
-.pricedesc-list li{line-height:20px;background:transparent;padding:15px 0;font-size:12px;color:#333;width:100%;border-width:0 0 1px 0;border-style:solid;border-color:#f3f3f3;box-shadow:none;border-radius:0;height:auto;font-weight:400;}
+.pricedesc-list li{line-height:20px;background:transparent;padding:10px 0;font-size:12px;color:#333;width:100%;border-width:0 0 1px 0;border-style:solid;border-color:#f3f3f3;box-shadow:none;border-radius:0;height:auto;font-weight:400;}
 .pricedesc-list li:nth-last-child(1),.pricedesc-list li:nth-last-child(1):hover{border-bottom:none;}
 
 .pricedesc-list li:hover{border-width:0 0 1px 0;border-style:solid;border-color:#f3f3f3;}
@@ -391,7 +391,7 @@ input {outline: none;}
 .trk-img{display:none;}
 .trk-md-img{width:92%;margin:0 auto;}
 .compare-table h4{margin-bottom:20px;font-weight:600;font-size:18px;}
-#compare{font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;font-size:.9em;line-height:20px;margin-bottom:80px;}
+.list-01 .qq{background:url("../img/qq.png") no-repeat left;width:12px;height:12px;background-size:100%;float:left;margin-top:9px;}#compare{font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;font-size:.9em;line-height:20px;margin-bottom:80px;}
 #compare table{width:100%;overflow:hidden;}
 #compare td+td{border:1px solid #fff;}
 #compare td{padding:15px 10px;text-align:center;vertical-align:middle;color:#333;}
